[package]
name = "clockception"
version = "0.1.0"
authors = ["xarvic <xarvix@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev = "452328c"}
druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}